# claude-review

./: .gitignore  CHANGELOG.md  LICENSE  README.md  claude_review.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
demo/: README.md  anim.html  capture.sh
docs/: BACKLOG.md  launch-reddit.md  troubleshooting.md
examples/: 00000000-demo-session-0000-000000000000.jsonl
skills/review-pane/: SKILL.md
skills/review-pane/scripts/: setup.sh
tests/: cleanroom.sh  test_parse.py
